fixed text wrap on h1

--- a/css/style.css
+++ b/css/style.css
@@ -808,11 +808,19 @@ footer h2 {
     flex-wrap: wrap;
   }
 }
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .restaurant-page__small-flex-container {
+    flex-direction: row;
+    gap: 25px;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+  }
+}
 .restaurant-page h1 {
   font-family: shrikhand, sans-serif;
   font-size: 28px;
   font-weight: 400;
-  padding-left: 10px;
+  padding-right: 40px;
 }
 @media screen and (min-width: 992px) {
   .restaurant-page h1 {
