--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -81,6 +81,7 @@
         font-family: shrikhand, sans-serif;
         font-size: 28px;
         font-weight: 400;
+        padding-right: 40px;
 
         @include desktop-only {
             padding-left: 30px;
